--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <ul>
 
                 <li>
-                    <a href="#content" class="list-item">
+                    <a href="#dashboard" class="list-item">
                         <img src="src/img/dashicon.png" alt="dashimage" class="icon2">
                         <label for="dash" class="description">Dashboard</label>
                     </a>
@@ -121,7 +121,7 @@
             <!--DASHBOARD-->
             <section class="dash-head">
 
-                <h3 id="dashboard">
+                <h3>
                     Dashboard
                 </h3>
 
@@ -176,7 +176,7 @@
 
             </ul>
 
-            <section class="chart">
+            <section class="chart" id="dashboard">
 
                 <section class="chart-grid">
 
@@ -347,7 +347,7 @@
                         <div class="kolom">
                             <h2>About Team 4</h2>
                             <p>
-                                We are Team 4 data analytics Section Jayapura PT. Educational Cita Revolution dedicated
+                                We are Team 4 data analytics Section Jayapura PT. Revolusi Cita Edukasi dedicated
                                 to exploring the meaning of every data point. With a rigorous approach and sophisticated
                                 algorithms, we turn raw data into valuable insights for your business. We believe that
                                 hidden within every dataset is great potential, and we are committed to helping you
@@ -370,14 +370,7 @@
                                                 21 2024
                                             </p>
                                             <p>
-                                                Determine what statement is for the capstone project, starting from the
-                                                background, establishing the problem statement, documenting the reasons
-                                                behind forming the problem statement, determining the main cause, matrix
-                                                and hypothesis. So from the results of the work a business statement was
-                                                produced from the capstone project which determined how to increase
-                                                sales at Guttenplans from 37.9 to 42% within 6 years, and a background
-                                                and analysis of the main causes of the things analyzed from the capstone
-                                                project was produced.
+                                                Determine the problem statement for a capstone project aimed at increasing the average vending machine revenue by 5% at Brunswick SQ Mall, from January 1, 2023 to June 30, 2023 Analyze the background and main causes of the current sales situation.
                                             </p>
                                         </div>
                                     </div>
@@ -451,84 +444,97 @@
                             <div class="team-member central-member">
                                 <img src="src/img/About Us/reyhan.jpeg" alt="Reyhan Fahrezi Maulana">
                                 <h5 class="name">Reyhan Fahrezi M</h5>
-                                <p class="job"> DA : Project Leader </p> 
-                                <p class="job"> SE : Deployment Team</p>
+                                <p class="job">Project Leader DA</p> 
+                                <p class="job">&</p> 
+                                <p class="job">Deployment Team</p>
                             </div>
                             <div class="team-member central-member">
                                 <img src="src/img/About Us/ghozi.jpeg" alt="Ghozi Abdullah">
                                 <h5 class="name">Ghozi Abdullah</h5>
-                                <p class="job"> DA : Data Communication </p>
-                                <p class="job"> SE : Project Leader </p>
+                                <p class="job">Project Leader SE</p>
+                                <p class="job">&</p> 
+                                <p class="job">Data Communication</p>
                             </div>
                         </figure>
                         <figure class="row">
                             <div class="team-member">
                                 <img src="src/img/About Us/kirana.jpeg" alt="Intania Syahla Kirana">
-                                <h5 class="name">Intania Syahla Kirana</h5>
-                                <p class="job">Data Visualization &</p> 
+                                <h5 class="name">Intania Kirana</h5>
+                                <p class="job">Data Visualization</p>
+                                <p class="job">&</p> 
                                 <p class="job">Front End Engineering</p>
                             </div>
                             <div class="team-member">
                                 <img src="src/img/About Us/qolbi.jpeg" alt="Qalbi Karunia">
                                 <h5 class="name">Qalbi Karunia</h5>
-                                <p class="job">DA : Data Cleaning </p>
-                                <p class="job">SE : Front End Engineering</p>
+                                <p class="job">Data Cleaning</p>
+                                <p class="job">&</p> 
+                                <p class="job">Front End Engineering</p>
                             </div>
                             <div class="team-member">
                                 <img src="src/img/About Us/alya.jpeg" alt="Alyatisa">
                                 <h5 class="name">Alyatisa</h5>
-                                <p class="job">DA : Data Communication </p> 
-                                <p class="job">SE : Front End Engineering</p>
+                                <p class="job">Data Communication</p>
+                                <p class="job">&</p>  
+                                <p class="job">Front End Engineering</p>
                             </div>
                             <div class="team-member">
                                 <img src="src/img/About Us/naufal.jpeg" alt="Naufal Nurrohmat">
                                 <h5 class="name">Naufal Nurrohmat</h5>
-                                <p class="job">DA : Data Cleaning </p> 
-                                <p class="job">SE : Front End Engineering</p>
+                                <p class="job">Data Cleaning</p>
+                                <p class="job">&</p>  
+                                <p class="job">Front End Engineering</p>
                             </div>
                             <div class="team-member">
                                 <img src="src/img/About Us/dimas.jpeg" alt="Dimas Agustia Samsudin">
-                                <h5 class="name">Dimas Agustia Samsudin</h5>
-                                <p class="job">DA : Data Analyst </p> 
-                                <p class="job">SE : Front End Engineering</p>
+                                <h5 class="name">Dimas Agustia S</h5>
+                                <p class="job">Data Analyst</p>
+                                <p class="job">&</p>  
+                                <p class="job">Front End Engineering</p>
                             </div>
                         </figure>
                         <figure class="row">
                             <div class="team-member">
                                 <img src="src/img/About Us/lydia.jpeg" alt="Lydia Yuliantika">
                                 <h5 class="name">Lydia Yuliantika</h5>
-                                <p class="job">DA : Data Visualization </p> 
-                                <p class="job">SE : Pitch Deck Team</p>
+                                <p class="job">Data Visualization</p>
+                                <p class="job">&</p>  
+                                <p class="job">Pitch Deck Team</p>
                             </div>
                             <div class="team-member">
                                 <img src="src/img/About Us/hilary.jpeg" alt="Hilary Gita Wangi">
                                 <h5 class="name">Hilary Gita Wangi</h5>
-                                <p class="job">DA : Data Analyst </p> 
-                                <p class="job">SE : Pitch Deck Team</p>
+                                <p class="job">Data Analyst</p> 
+                                <p class="job">&</p> 
+                                <p class="job">Pitch Deck Team</p>
                             </div>
                             <div class="team-member">
                                 <img src="src/img/About Us/ifah.jpeg" alt="Ifah Fatmawati">
                                 <h5 class="name">Ifah Fatmawati</h5>
-                                <p class="job">DA : Data Cleaning </p> 
-                                <p class="job">SE : Pitch Deck Team</p>
+                                <p class="job">Data Cleaning</p> 
+                                <p class="job">&</p> 
+                                <p class="job">Pitch Deck Team</p>
                             </div>
                             <div class="team-member">
                                 <img src="src/img/About Us/alid.jpeg" alt="Muhammad Alid Rizky Ma'aly">
-                                <h5 class="name">Muhammad Alid R M</h5>
-                                <p class="job">DA : Data Analyst </p> 
-                                <p class="job">SE : Quality Assurance</p>
+                                <h5 class="name">M Alid Rizky Ma`Aly</h5>
+                                <p class="job">Data Analyst</p>
+                                <p class="job">&</p>  
+                                <p class="job">Quality Assurance</p>
                             </div>
                             <div class="team-member">
                                 <img src="src/img/About Us/anisa.jpeg" alt="Anisa Rahmawati">
                                 <h5 class="name">Anisa Rahmawati</h5>
-                                <p class="job">DA : Data Visualization </p> 
-                                <p class="job">SE : Quality Assurance</p>
+                                <p class="job">Data Visualization</p>
+                                <p class="job">&</p>  
+                                <p class="job">Quality Assurance</p>
                             </div>
                             <div class="team-member">
                                 <img src="src/img/About Us/hailar.jpeg" alt="Hailar Kharisma">
-                                <h5 class="name">Hailar Kharisma</h5>
-                                <p class="job">DA : Data Communication </p>
-                                <p class="job">SE : Quality Assurance</p>
+                                <h5 class="name">Hailar Kharisma Z</h5>
+                                <p class="job">Data Communication</p>
+                                <p class="job">&</p> 
+                                <p class="job">Quality Assurance</p>
                             </div>
                         </figure>
                     </article>
