--- a/index.html
+++ b/index.html
@@ -180,15 +180,15 @@
 
                 <section class="chart-grid">
 
-                    <article class="c" id="myChart">
-                        <label for="chart1">Top Category Per Month</label>
+                    <article class="c">
+                        <label for="chart1" id="myChart">Top Category Per Month</label>
                         <div class="chart_wrapper">
                             <canvas id="chartbar"></canvas>
                         </div>
                     </article>
 
-                    <article class="c" id="myChart">
-                        <label for="chart2">Top 10 Most Sold Product</label>
+                    <article class="c">
+                        <label for="chart2"  id="myChart">Top 10 Most Sold Product</label>
                         <div class="chart_wrapper">
                             <canvas id="chartproduct"></canvas>
                         </div>
@@ -200,8 +200,8 @@
                         <table id="tabelchart" class="display" style="width:100%"></table>
                     </article>
 
-                    <article class="c" id="myChart">
-                        <label for="chart4">Average Transaction Value Per Payment Method</label>
+                    <article class="c">
+                        <label for="chart4"  id="myChart">Average Transaction Value Per Payment Method</label>
                         <!-- <canvas id="chart4"></canvas> -->
                         <div class="chart_wrapper">
                             <canvas id="piechart"></canvas>
