about us responsive.2

--- a/index.html
+++ b/index.html
@@ -382,11 +382,7 @@
                                                 April 2024
                                             </p>
                                             <p>
-                                                Cleaning data in Spreadsheets to tidy up and perfect the data that will
-                                                be carried out by analysts. So data is produced that is ready to be used
-                                                after passing the results of checking duplicate data, missing value data
-                                                in each column by checking for outliers based on category and average
-                                                Rprice based on standard deviation and IQR.
+                                                Cleaning data in the Spreadsheet to tidy up and correct the data to be performed by the analyst. The result is data that is ready to use after checking for duplicates, missing values, and outliers by category and average Rprice with standard deviation and IQR.
                                             </p>
                                         </div>
                                     </div>
@@ -396,11 +392,7 @@
                                             <p class="date"><i class="fa fa-calendar" aria-hidden="true"></i> April
                                                 4-April 17 2024</p>
                                             <p>
-                                                Data Analysts are tasked with interpreting data to support business
-                                                decisions by analyzing patterns and trends from various sources, by
-                                                searching for various kinds of data needed in the data analyst decision
-                                                making process which is carried out from queries that are displayed to
-                                                strengthen the arguments that are being searched for and analyzed.
+                                                Data Analysts interpret data to support business decisions by analyzing patterns and trends from various sources, and using queries to strengthen arguments in decision making.
                                             </p>
                                         </div>
                                     </div>
@@ -410,11 +402,7 @@
                                             <p class="date"><i class="fa fa-calendar" aria-hidden="true"></i> April 17,
                                                 2024 – April 19, 2024</p>
                                             <p>
-                                                Creating and designing a display from data that has been analyzed to
-                                                present and facilitate communication between stakeholders. Data
-                                                visualization provides very useful information for business purposes,
-                                                where decision makers in the company can easily see and understand the
-                                                results of the company's work, based on the variables they have.
+                                                Creating and designing displays of analyzed data to facilitate communication between related parties. Data visualization provides useful information for business purposes, where decision makers can easily see and understand the company's work.
                                             </p>
                                         </div>
                                     </div>
@@ -424,11 +412,7 @@
                                             <p class="date"><i class="fa fa-calendar" aria-hidden="true"></i> 19 April
                                                 2024</p>
                                             <p>
-                                                Create and select data that is poured into a slideshow to display all
-                                                the results of data analysis obtained in the decision-making process in
-                                                a form that is easy to understand and understood by relevant
-                                                stakeholders or partners as material to strengthen arguments for
-                                                business process decision-making.
+                                                Create and select data on slides to show the results of data analysis in the decision-making process in an easy-to-understand manner for relevant stakeholders as a basis for strengthening business decision-making arguments.
                                         </div>
                                     </div>
                                 </div>
