about us responsive.2

--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
                                 group for a Vending Machine company.
                             </p>
                         </div>
-                        <img src="src/img/About Us/foto tim.jpeg" alt="Teamwork Quotes" class="transparan"/>
+                        <img src="src/img/About Us/Tim-SE.jpeg" alt="Teamwork Quotes" class="transparan"/>
                     </section>
 
                     <section class="about" id="courses">
@@ -345,7 +345,7 @@
                         <div class="kolom">
                             <h2>About Team 4</h2>
                             <p>
-                                We are Team 4 data analytics Section Jayapura PT. Revolusi Cita Edukasi dedicated
+                                We are Team 4 data analytics Section Jayapura PT Revolusi Cita Edukasi dedicated
                                 to exploring the meaning of every data point. With a rigorous approach and sophisticated
                                 algorithms, we turn raw data into valuable insights for your business. We believe that
                                 hidden within every dataset is great potential, and we are committed to helping you
@@ -441,7 +441,7 @@
                         <figure class="row">
                             <div class="team-member">
                                 <img src="src/img/About Us/kirana.jpeg" alt="Intania Syahla Kirana">
-                                <h5 class="name">Intania Kirana</h5>
+                                <h5 class="name">Intania S Kirana</h5>
                                 <p class="job">Data Visualization</p>
                                 <p class="job">&</p> 
                                 <p class="job">Front End Engineering</p>
@@ -535,7 +535,7 @@
             <section class="cite">
 
                 <article>
-                    Copyright &copy;2024; Designed by jayapura Team 4
+                    Copyright &copy;2024; Designed by Jayapura Team 4
                 </article>
 
             </section>
