--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
                         <figure class="row">
                             <div class="team-member">
                                 <img src="src/img/About Us/lydia.jpeg" alt="Lydia Yuliantika">
-                                <h5 class="name">Lydia Yuliantika</h5>
+                                <h5 class="name">Yuli</h5>
                                 <p class="job">Data Visualization</p>
                                 <p class="job">&</p>  
                                 <p class="job">Pitch Deck Team</p>
